# Change Log
[Simple Movable Grid](https://www.curseforge.com/minecraft/mc-mods/simple-movable-grid).
[Source](https://github.com/Iunius118/SimpleMovableGrid).

## [Unreleased]

## [1.19-1.1.3-Forge]
### Fixed
- Compatible with Forge 1.19-41.0.98.

## [1.19-1.1.2-Forge]
### Fixed
- Compatible with Forge 1.19-41.0.64.

## [1.19-1.1.1-Forge]
### Changed
- Update to Minecraft 1.19.

### Fixed
- Translation of messages.

## [1.18-1.1.0-Forge]
### Added
- Translation keys for messages.

## [1.18-1.0.0-Forge]
### Changed
- Port to 1.18.

## [1.17.1-1.0.0-Forge]
### Added
- Grid renderer.
- Shortcut keys to change config.