@@ -1,6 +1,7 @@
 {
   "package": "com.github.iunius118.simplemovablegrid.mixin",
   "mixins": [
+    "MixinDebugRenderer"
   ],
   "refmap": "mixins.simplemovablegrid.refmap.json",
   "required": true,
