@@ -4,6 +4,9 @@
 
 ## [Unreleased]
 
+### Changed
+- Timing of rendering grid.
+
 ## [1.19-1.1.3-Forge]
 ### Fixed
 - Compatible with Forge 1.19-41.0.98.
